updated marketing copy on landing page

--- a/src/Cms/CoreBundle/Resources/views/App/components.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/App/components.html.twig
@@ -97,13 +97,13 @@
         <footer id='primary-footer'>
             <div class="span10">
                 <ul>
-                    <li>Thanks for publishing your content on <a href="{{ path('_welcome') }}">PipeStack</a></li>
+                    <li>Thanks for using <a href="{{ path('_welcome') }}">PipeStack</a></li>
                     <li>|</li>
-                    <li>Need a hand? <a href="#">Get Help</a></li>
+                    <li>Need a hand? <a href="mailto:support@pipestack.com"">Email Us</a></li>
                 </ul>
             </div>
-            <div class="span2">
-                Using version Alpha - 1.0
+            <div class="span2" style="text-align: right">
+                Using version 1.0
             </div>
         </footer>
     </div>
