--- a/src/Cms/CoreBundle/Resources/views/Site/index.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Site/index.html.twig
@@ -76,4 +76,7 @@
             </div>
         </div>
     </div>
+    {% block footer %}
+        {{ parent() }}
+    {% endblock %}
 {% endblock %}
