--- a/src/Cms/CoreBundle/Resources/views/Site/new.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Site/new.html.twig
@@ -22,7 +22,7 @@
         <div id="primary-container">
             <div class="row-fluid">
                 <div class="span4 offset4">
-                    <h1>Create a New Site</h1>
+                    <h1>Register a New Site</h1>
                 </div>
             </div>
             {% if notices|length > 0 %}
