--- a/src/Cms/CoreBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/index.html.twig
@@ -32,12 +32,10 @@
                 <div class="visible-phone" id="mobile-imac-container">
                     <img src="/flat-ui/images/imac.png" alt="PipeStack CMS" width="300" height="248"/>
                 </div>
-                <p>
-                    Corned beef meatloaf jerky tail pastrami. Chuck tongue jowl pastrami pork belly. Cow bacon short loin filet mignon pancetta tongue pork loin. Ball tip pancetta tenderloin turducken turkey doner spare ribs leberkas pork swine cow sirloin tri-tip beef ribs. Ribeye t-bone tri-tip biltong. Shank swine jerky pork chop frankfurter strip steak capicola tail shoulder chuck shankle sausage flank. Tri-tip frankfurter shank, pastrami pork loin beef ribs fatback tongue
+                <p style="padding: 25px 24px;">
+                    PipeStack is a powerful new technology that helps you do amazing things with your content. As a highly scalable backend CMS service you can create astonishing Web and jQuery Mobile Apps in no time. Give it a go and try it for free today.
                 </p>
-
-                    <a href="{{ path('cms_core.user_register') }}" id="primary-cta" class="btn btn-xlarge btn-danger">Get Started For Free</a>
-
+                <a href="{{ path('cms_core.user_register') }}" id="primary-cta" class="btn btn-xlarge btn-danger">Try It Today For Free</a>
             </div>
         </section>
     </div>
@@ -49,67 +47,44 @@
                 <div class="tile" id='fast-tile'>
                     <h2>Lightening Fast</h2>
                     <i class="icon-bolt icon-4x"></i>
-                    <p>Bacon ipsum dolor sit amet ham hock ham brisket pork loin. Ball tip tail pancetta swine flank bacon. Biltong kiel basa swine tail. Ball tip tail pancetta. Ball tip tail Brisket.</p>
+                    <p>We focus on making your content load mind numbingly fast. Our technology stack does the heavy lifting to deliver your backend data to you in no time.</p>
                 </div>
             </section>
             <section class="span4">
-                <div class="tile" id="cloud-tile">
-                    <h2>Cloud Hosted</h2>
-                    <i class="icon-cloud icon-4x"></i>
-                    <p>Bacon ipsum dolor sit amet ham hock ham brisket pork loin. Ball tip tail pancetta swine flank bacon. Biltong kiel basa swine tail. Ball tip tail pancetta. Ball tip tail Brisket.</p>
+                <div class="tile" id="mobile-tile">
+                    <h2>Mobile Ready</h2>
+                    <i class="icon-tablet icon-4x"></i>
+                    <p>PipeStack is well suited to power your jQuery Mobile app's backend. We help you deliver the best user experience through fast load times and low overhead.</p>
                 </div>
             </section>
             <section class="span4">
                 <div class="tile" id="api-tile">
                     <h2>RESTful API</h2>
                     <i class="icon-magic icon-4x"></i>
-                    <p>Bacon ipsum dolor sit amet ham hock ham brisket pork loin. Ball tip tail pancetta swine flank bacon. Biltong kiel basa swine tail. Ball tip tail pancetta. Ball tip tail Brisket.</p>
+                    <p>We deliver your backend data through a RESTful web API. The interface is simple and intuitive. You'll have your requests up and running in no time.</p>
                 </div>
             </section>
         </div>
         <div class="row">
             <section class="span4">
+                <div class="tile" id="easy-to-use-tile">
+                    <h2>Easy to Use</h2>
+                    <i class="icon-thumbs-up icon-4x"></i>
+                    <p>Whether you are creating new content with PipeStack or loading in content from your CMS, you'll find our interface initiative and wonderfully easy to use.</p>
+                </div>
+            </section>
+            <section class="span4">
                 <div class="tile" id="multilingual-tile">
-                    <h2>Multi Lingual</h2>
+                    <h2>CMS Integration</h2>
                     <i class="icon-globe icon-4x"></i>
-                    <p>Bacon ipsum dolor sit amet ham hock ham brisket pork loin. Ball tip tail pancetta swine flank bacon. Biltong kiel basa swine tail. Ball tip tail pancetta. Ball tip tail Brisket.</p>
+                    <p>Integrating your content management system is a cinch. Use your current CMS and PipeStack in parallel to bring your content delivery to new levels.</p>
                 </div>
             </section>
             <section class="span4">
                 <div class="tile" id="cog-tile">
                     <h2><span id="new-tech-affix">New</span> Technology</h2>
                     <i class="icon-cog icon-4x"></i>
-                    <p>Bacon ipsum dolor sit amet ham hock ham brisket pork loin. Ball tip tail pancetta swine flank bacon. Biltong kiel basa swine tail. Ball tip tail pancetta. Ball tip tail Brisket.</p>
-                </div>
-            </section>
-            <section class="span4">
-                <div class="tile" id="theme-tile">
-                    <h2>Theme System</h2>
-                    <i class="icon-heart icon-4x"></i>
-                    <p>Bacon ipsum dolor sit amet ham hock ham brisket pork loin. Ball tip tail pancetta swine flank bacon. Biltong kiel basa swine tail. Ball tip tail pancetta. Ball tip tail Brisket.</p>
-                </div>
-            </section>
-        </div>
-        <div class="row">
-            <section class="span4">
-                <div class="tile" id="mobile-tile">
-                    <h2>Mobile Ready</h2>
-                    <i class="icon-tablet icon-4x"></i>
-                    <p>Bacon ipsum dolor sit amet ham hock ham brisket pork loin. Ball tip tail pancetta swine flank bacon. Biltong kiel basa swine tail. Ball tip tail pancetta. Ball tip tail Brisket.</p>
-                </div>
-            </section>
-            <section class="span4">
-                <div class="tile" id="multidomain-tile">
-                    <h2>Multi Domain</h2>
-                    <i class="icon-sitemap icon-4x"></i>
-                    <p>Bacon ipsum dolor sit amet ham hock ham brisket pork loin. Ball tip tail pancetta swine flank bacon. Biltong kiel basa swine tail. Ball tip tail pancetta. Ball tip tail Brisket.</p>
-                </div>
-            </section>
-            <section class="span4">
-                <div class="tile" id="easy-to-use-tile">
-                    <h2>Easy to Use</h2>
-                    <i class="icon-thumbs-up icon-4x"></i>
-                    <p>Bacon ipsum dolor sit amet ham hock ham brisket pork loin. Ball tip tail pancetta swine flank bacon. Biltong kiel basa swine tail. Ball tip tail pancetta. Ball tip tail Brisket.</p>
+                    <p>PipeStack's complete technology stack combines new database technology, high end server technology and powerful Content Delivery Networks.</p>
                 </div>
             </section>
         </div>
@@ -117,63 +92,63 @@
 </div>
 <section id="testimonials">
     <div class="container">
-        <div class="row row-title">
-            <div class="span12">
-                <h2>Who's Talking About PipeStack?</h2>
-            </div>
-        </div>
-        <div class="row row-top">
-            <div class="quote-block">
-                <div class="span2">
-                    <img src="{{ asset('testimonial-profile-brian.png') }}" alt="testimonial-brian" class="img-circle pull-right" width="125" height="125"/>
-                </div>
-                <div class="span4">
-                    <blockquote>
-                        <i class="icon-quote-right icon-2x pull-right"></i>
-                        <span class=''>Swine ball tip corned beef, salami venison chicken bres aola beef pork chop short ribs turkey brisket meat loaf shoulder tongue. Andouille shank turkey shoulder jowla oaf.</span>
-                        <small class="pull-right">Brian Anderson, <cite title="Source Title">CEO Ovooko</cite></small>
-                    </blockquote>
-                </div>
-            </div>
-            <div class="quote-block">
-                <div class="span2">
-                    <img src="{{ asset('testimonial-profile-brian.png') }}" alt="testimonial-brian" class="img-circle pull-right" width="125" height="125"/>
-                </div>
-                <div class="span4">
-                    <blockquote>
-                        <i class="icon-quote-right icon-2x pull-right"></i>
-                        <span class=''>Swine ball tip corned beef, salami venison chicken bres aola beef pork chop short ribs turkey brisket meat loaf shoulder tongue. Andouille shank turkey shoulder jowla oaf.</span>
-                        <small class="pull-right">Brian Anderson, <cite title="Source Title">CEO Ovooko</cite></small>
-                    </blockquote>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="quote-block">
-                <div class="span2">
-                    <img src="{{ asset('testimonial-profile-brian.png') }}" alt="testimonial-brian" class="img-circle pull-right" width="125" height="125"/>
-                </div>
-                <div class="span4">
-                    <blockquote>
-                        <i class="icon-quote-right icon-2x pull-right"></i>
-                        <span class=''>Swine ball tip corned beef, salami venison chicken bres aola beef pork chop short ribs turkey brisket meat loaf shoulder tongue. Andouille shank turkey shoulder jowla oaf.</span>
-                        <small class="pull-right">Brian Anderson, <cite title="Source Title">CEO Ovooko</cite></small>
-                    </blockquote>
-                </div>
-            </div>
-            <div class="quote-block">
-                <div class="span2">
-                    <img src="{{ asset('testimonial-profile-brian.png') }}" alt="testimonial-brian" class="img-circle pull-right" width="125" height="125"/>
-                </div>
-                <div class="span4">
-                    <blockquote>
-                        <i class="icon-quote-right icon-2x pull-right"></i>
-                        <span class=''>Swine ball tip corned beef, salami venison chicken bres aola beef pork chop short ribs turkey brisket meat loaf shoulder tongue. Andouille shank turkey shoulder jowla oaf.</span>
-                        <small class="pull-right">Brian Anderson, <cite title="Source Title">CEO Ovooko</cite></small>
-                    </blockquote>
-                </div>
-            </div>
-        </div>
+        {#<div class="row row-title">#}
+            {#<div class="span12">#}
+                {#<h2>Who's Talking About PipeStack?</h2>#}
+            {#</div>#}
+        {#</div>#}
+        {#<div class="row row-top">#}
+            {#<div class="quote-block">#}
+                {#<div class="span2">#}
+                    {#<img src="{{ asset('testimonial-profile-brian.png') }}" alt="testimonial-brian" class="img-circle pull-right" width="125" height="125"/>#}
+                {#</div>#}
+                {#<div class="span4">#}
+                    {#<blockquote>#}
+                        {#<i class="icon-quote-right icon-2x pull-right"></i>#}
+                        {#<span class=''>Swine ball tip corned beef, salami venison chicken bres aola beef pork chop short ribs turkey brisket meat loaf shoulder tongue. Andouille shank turkey shoulder jowla oaf.</span>#}
+                        {#<small class="pull-right">Brian Anderson, <cite title="Source Title">CEO Ovooko</cite></small>#}
+                    {#</blockquote>#}
+                {#</div>#}
+            {#</div>#}
+            {#<div class="quote-block">#}
+                {#<div class="span2">#}
+                    {#<img src="{{ asset('testimonial-profile-brian.png') }}" alt="testimonial-brian" class="img-circle pull-right" width="125" height="125"/>#}
+                {#</div>#}
+                {#<div class="span4">#}
+                    {#<blockquote>#}
+                        {#<i class="icon-quote-right icon-2x pull-right"></i>#}
+                        {#<span class=''>Swine ball tip corned beef, salami venison chicken bres aola beef pork chop short ribs turkey brisket meat loaf shoulder tongue. Andouille shank turkey shoulder jowla oaf.</span>#}
+                        {#<small class="pull-right">Brian Anderson, <cite title="Source Title">CEO Ovooko</cite></small>#}
+                    {#</blockquote>#}
+                {#</div>#}
+            {#</div>#}
+        {#</div>#}
+        {#<div class="row">#}
+            {#<div class="quote-block">#}
+                {#<div class="span2">#}
+                    {#<img src="{{ asset('testimonial-profile-brian.png') }}" alt="testimonial-brian" class="img-circle pull-right" width="125" height="125"/>#}
+                {#</div>#}
+                {#<div class="span4">#}
+                    {#<blockquote>#}
+                        {#<i class="icon-quote-right icon-2x pull-right"></i>#}
+                        {#<span class=''>Swine ball tip corned beef, salami venison chicken bres aola beef pork chop short ribs turkey brisket meat loaf shoulder tongue. Andouille shank turkey shoulder jowla oaf.</span>#}
+                        {#<small class="pull-right">Brian Anderson, <cite title="Source Title">CEO Ovooko</cite></small>#}
+                    {#</blockquote>#}
+                {#</div>#}
+            {#</div>#}
+            {#<div class="quote-block">#}
+                {#<div class="span2">#}
+                    {#<img src="{{ asset('testimonial-profile-brian.png') }}" alt="testimonial-brian" class="img-circle pull-right" width="125" height="125"/>#}
+                {#</div>#}
+                {#<div class="span4">#}
+                    {#<blockquote>#}
+                        {#<i class="icon-quote-right icon-2x pull-right"></i>#}
+                        {#<span class=''>Swine ball tip corned beef, salami venison chicken bres aola beef pork chop short ribs turkey brisket meat loaf shoulder tongue. Andouille shank turkey shoulder jowla oaf.</span>#}
+                        {#<small class="pull-right">Brian Anderson, <cite title="Source Title">CEO Ovooko</cite></small>#}
+                    {#</blockquote>#}
+                {#</div>#}
+            {#</div>#}
+        {#</div>#}
     </div>
 </section>
 <div id="signup-blocks">
