--- a/src/Cms/CoreBundle/Resources/views/App/index.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/App/index.html.twig
@@ -8,39 +8,36 @@
     {% endblock %}
     <div class="container" style="margin-top: 60px">
         <div class="row">
-            <section class="span12">
-                <h1>Welcome To PipeStack</h1>
-                <p>
-                    Select some stuff here and do some stuff here while you're at it
-                </p>
+            <section class="span4 offset4">
+                <h1 style="text-align: center;margin: 30px 0px 40px;">Welcome To PipeStack</h1>
                 <hr>
             </section>
         </div>
         <div class="row">
-            <section class="span12">
-                <h2 style="display:inline">Your Sites</h2><a style="font-size:18px;margin-left:12px;" href="{{ path('cms_core.site_new') }}"><i class="icon-plus-sign"></i> Add New</a>
+            <section class="span4 offset4">
                 {% block notices %}{{ parent() }}{% endblock %}
-                <ul>
-                    {% for site in sites  %}
-                        <li>
-                            <h2>{{ site.name }}</h2>
-                            <a class="btn btn-info" href="{{ path('cms_core.site_read', {'id':site.id}) }}"><i class="icon-eye-open"></i> View</a>
-                            <form action="{{ path('cms_core.site_delete') }}" method="POST" style="display: inline">
-                                <input type="hidden" name="token" value="{{ token }}"/>
-                                <input type="hidden" name="id" value="{{ site.id }}"/>
-                                <button class="btn btn-danger"><i class="icon-trash"></i> Trash</button>
-                            </form>
-                        </li>
-                    {% endfor %}
-                </ul>
+                {% if sites|length > 0 %}
+                    <h2 style="display:inline">Your Sites</h2><a style="font-size:18px;margin-left:12px;" href="{{ path('cms_core.site_new') }}"><i class="icon-plus-sign"></i> Add New</a>
+                    <ul>
+                        {% for site in sites  %}
+                            <li>
+                                <h2>{{ site.name }}</h2>
+                                <a class="btn btn-info" href="{{ path('cms_core.site_read', {'id':site.id}) }}"><i class="icon-eye-open"></i> View</a>
+                                <form action="{{ path('cms_core.site_delete') }}" method="POST" style="display: inline">
+                                    <input type="hidden" name="token" value="{{ token }}"/>
+                                    <input type="hidden" name="id" value="{{ site.id }}"/>
+                                    <button class="btn btn-danger"><i class="icon-trash"></i> Trash</button>
+                                </form>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                {% else %}
+                    <section style="text-align: center">
+                        <h2>Start by Registering a Site:</h2>
+                        <a href="{{ path('cms_core.site_new') }}" class="btn btn-info">Start Here</a>
+                    </section>
+                {% endif %}
             </section>
         </div>
-        <hr>
     </div>
-
-    <footer>
-        {% block footer %}
-            {{ parent() }}
-        {% endblock %}
-    </footer>
 {% endblock %}
