updated marekting copy for landing page

--- a/src/Cms/CoreBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/index.html.twig
@@ -156,22 +156,22 @@
         <div class="row">
             <section class="span4">
                 <div class='tile tile-signup'>
-                    <h3>Free</h3>
-                    <p>Swine ball tip corned beef, salami venison chicken bres aola beef pork chop short ribs turkey brisket meat loaf shoulder tongue. Andouille shank turkey shoulder jowla oaf.</p>
-                    <a href="{{ path('cms_core.user_register', {'account_type':'free'}) }}" class="btn btn-xlarge btn-primary">Get Free</a>
+                    <h3>Try for Free</h3>
+                    <p>Want to jump in? Start your 30 day free trial today. No payment information is required, just register and go.</p>
+                    <a href="{{ path('cms_core.user_register', {'account_type':'free'}) }}" class="btn btn-xlarge btn-primary">Try for Free</a>
                 </div>
             </section>
             <section class="span4">
                 <div class="tile tile-signup">
-                    <h3>Premium</h3>
-                    <p>Swine ball tip corned beef, salami venison chicken bres aola beef pork chop short ribs turkey brisket meat loaf shoulder tongue. Andouille shank turkey shoulder jowla oaf.</p>
+                    <h3>Get Premium</h3>
+                    <p>Sign up for a premium account and get your PipeStack instance today. Prices start at $60 per month for 15 gigs of storage.</p>
                     <a href="{{ path('cms_core.user_register', {'account_type':'premium'}) }}" class="btn btn-xlarge btn-info">Get Premium</a>
                 </div>
             </section>
             <section class="span4">
                 <div class="tile tile-signup">
-                    <h3>Enterprise</h3>
-                    <p>Swine ball tip corned beef, salami venison chicken bres aola beef pork chop short ribs turkey brisket meat loaf shoulder tongue. Andouille shank turkey shoulder jowla oaf.</p>
+                    <h3>Get Enterprise</h3>
+                    <p>Sign up for an enterprise account for larger instances and priority customer support. Please <a href="mailto:support@pipestack.com">contact us</a> for more information. </p>
                     <a href="{{ path('cms_core.user_register', {'account_type':'enterprise'}) }}" class="btn btn-xlarge btn-danger"><span class="hidden-tablet">Get </span>Enterprise</a>
                 </div>
             </section>
