--- a/src/Cms/CoreBundle/Resources/views/Welcome/base.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/base.html.twig
@@ -12,6 +12,9 @@
 {% block welcomeHeader %}
     <div class="span pull-left">
         <span id="logo-name" style="font-size:50px; position: relative; top: 10px; font-weight: bold;">PipeStack</span>
+        <a href="mailto:support@pipestack.com" class="topnav-anchor" style="margin-left: 60px;">Contact</a>
+        <a href="http://blog.pipestack.com" class="topnav-anchor">Blog</a>
+        <a href="{{ path('cms_core.developers') }}" class="topnav-anchor">Docs</a>
     </div>
     <div class="span pull-right">
         <span id='topnav-button-container' class="pull-right" style="position: relative; top: 22px">
