updated welcome header

--- a/src/Cms/CoreBundle/Resources/public/css/welcome/index.css
+++ b/src/Cms/CoreBundle/Resources/public/css/welcome/index.css
@@ -14,6 +14,7 @@ body {
     position: relative;
     top: 3px;
     margin-left: 20px;
+    font-weight: 600;
 }
 #primary-content {
     padding-top: 30px;
