added google analytics

--- a/src/Cms/CoreBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/index.html.twig
@@ -36,8 +36,11 @@
                 <div class="visible-phone" id="mobile-imac-container">
                     <img src="/flat-ui/images/imac.png" alt="PipeStack CMS" width="300" height="248"/>
                 </div>
-                <p style="padding: 25px 24px;">
-                    PipeStack is a powerful new technology that helps you do amazing things with your content. As a highly scalable backend CMS service you can create astonishing Web and jQuery Mobile Apps in no time. Give it a go and try it for free today.
+                <p style="padding: 16px 24px;">
+                    PipeStack is a powerful new technology that helps you do amazing things with your content. As a highly scalable backend CMS service you can create astonishing Web and jQuery Mobile Apps in no time.
+                </p>
+                <p style="padding: 16px;">
+                    Give it a go and try it for free today.
                 </p>
                 <a href="{{ path('cms_core.user_register') }}" id="primary-cta" class="btn btn-xlarge btn-danger">Try It Today For Free</a>
             </div>
