updated top nav links, added titles to login and register

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,11 +6,11 @@
         {% block metatags %}{% endblock %}
         <title>{% block title %} | PipeStack{% endblock %}</title>
         {% block stylesheets %}
-            {#<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">#}
-            {#<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">#}
-            <link href="/dependencies/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-            <link href="/dependencies/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
-            <link href="/dependencies/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+            <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+            <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
+            {#<link href="/dependencies/bootstrap/css/bootstrap.min.css" rel="stylesheet">#}
+            {#<link href="/dependencies/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">#}
+            {#<link href="/dependencies/font-awesome/css/font-awesome.min.css" rel="stylesheet">#}
             {% stylesheets
                 'flat-ui/css/flat-ui-local.css'
                 'flat-ui/custom/css/custom.css'
@@ -23,10 +23,10 @@
     <body>
         {% block body %}{% endblock %}
         {% block javascripts %}
-            {#<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>#}
-            {#<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>#}
-            <script src="/dependencies/jquery-1.10.1.min.js"></script>
-            <script src="/dependencies/bootstrap/js/bootstrap.min.js"></script>
+            <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+            <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+            {#<script src="/dependencies/jquery-1.10.1.min.js"></script>#}
+            {#<script src="/dependencies/bootstrap/js/bootstrap.min.js"></script>#}
             <script>
                 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
