--- a/src/Cms/CoreBundle/Resources/views/Welcome/signup.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/signup.html.twig
@@ -10,6 +10,10 @@
     {% endstylesheets %}
 {% endblock %}
 
+{% block title %}
+    Sign Up {{ parent() }}
+{% endblock %}
+
 {% block body %}
     <div class="container">
         <div class="row">
