--- a/src/Cms/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Cms/UserBundle/Resources/views/Security/login.html.twig
@@ -9,6 +9,10 @@
     {% endstylesheets %}
 {% endblock %}
 
+{% block title %}
+    Login {{ parent() }}
+{% endblock %}
+
 {% block body %}
     <div class="container">
         <div class="row">
