changed some copy on welcome

--- a/src/Cms/CoreBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/index.html.twig
@@ -54,7 +54,7 @@
                 <div class="tile" id='fast-tile'>
                     <h2>Lightening Fast</h2>
                     <i class="icon-bolt icon-4x"></i>
-                    <p>We focus on making your content load mind numbingly fast. Our technology stack does the heavy lifting to deliver your backend data to you in no time.</p>
+                    <p>We focus on making your content load lightening fast. Our technology stack does the heavy lifting to deliver your backend data to you in no time.</p>
                 </div>
             </section>
             <section class="span4">
