added sites endpoint to api docs

--- a/src/Cms/CoreBundle/Resources/views/Developers/index.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Developers/index.html.twig
@@ -46,6 +46,7 @@
                         <li class="{% if doc == 'nodes' %}active{% endif %}"><a href="{{ path('cms_core.developers_endpoint_nodes') }}">Nodes</a></li>
                         <li class="{% if doc == 'media' %}active{% endif %}"><a href="{{ path('cms_core.developers_endpoint_media') }}">Media</a></li>
                         <li class="{% if doc == 'types' %}active{% endif %}"><a href="{{ path('cms_core.developers_endpoint_types') }}">Types</a></li>
+                        <li class="{% if doc == 'site' %}active{% endif %}"><a href="{{ path('cms_core.developers_endpoint_sites') }}">Sites</a></li>
                         <li><br /></li>
                     </ul>
                 {% endblock %}
