--- a/src/Cms/CoreBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/index.html.twig
@@ -37,7 +37,7 @@
                     <img src="/flat-ui/images/imac.png" alt="PipeStack CMS" width="300" height="248"/>
                 </div>
                 <p style="padding: 16px 24px;">
-                    PipeStack is a powerful new technology that helps you do amazing things with your content. As a highly scalable backend CMS service you can create astonishing Web and jQuery Mobile Apps in no time.
+                    PipeStack is a powerful new technology that helps you do amazing things with your content. Our backend CMS service makes it easy to turn your content into astonishing web and mobile apps. Create new content with our interface or integrate your current CMS.
                 </p>
                 <p style="padding: 16px;">
                     Give it a go and try it for free today.
@@ -54,7 +54,7 @@
                 <div class="tile" id='fast-tile'>
                     <h2>Lightening Fast</h2>
                     <i class="icon-bolt icon-4x"></i>
-                    <p>We focus on making your content load lightening fast. Our technology stack does the heavy lifting to deliver your backend data to you in no time.</p>
+                    <p>We focus on making your content load at lightening fast speeds. Our technology stack does the heavy lifting to deliver your data to you in no time.</p>
                 </div>
             </section>
             <section class="span4">
@@ -68,7 +68,7 @@
                 <div class="tile" id="api-tile">
                     <h2>RESTful API</h2>
                     <i class="icon-magic icon-4x"></i>
-                    <p>We deliver your backend data through a RESTful web API. The interface is simple and intuitive. You'll have your requests up and running in no time.</p>
+                    <p>We deliver your content's data through a RESTful web API. The interface is simple and intuitive. Checkout the <a href="{{ path('cms_core.developers') }}">docs</a>, you'll  be up and running in no time.</p>
                 </div>
             </section>
         </div>
@@ -84,14 +84,14 @@
                 <div class="tile" id="multilingual-tile">
                     <h2>CMS Integration</h2>
                     <i class="icon-globe icon-4x"></i>
-                    <p>Integrating your content management system is a cinch. Use your current CMS and PipeStack in parallel to bring your content delivery to new levels.</p>
+                    <p>Integrating your content management system can be done through the API. Use your current CMS and PipeStack in parallel to bring your content to new levels.</p>
                 </div>
             </section>
             <section class="span4">
                 <div class="tile" id="cog-tile">
                     <h2><span id="new-tech-affix">New</span> Technology</h2>
                     <i class="icon-cog icon-4x"></i>
-                    <p>PipeStack's complete technology stack combines new database technology, high end server technology and powerful Content Delivery Networks.</p>
+                    <p>PipeStack's complete technology stack combines new database technology with high end servers and powerful content delivery networks.</p>
                 </div>
             </section>
         </div>
@@ -179,7 +179,7 @@
                 <div class="tile tile-signup">
                     <h3>Get Enterprise</h3>
                     <p>Sign up for an enterprise account for larger instances and priority customer support. Please <a href="mailto:support@pipestack.com">contact us</a> for more information. </p>
-                    <a href="{{ path('cms_core.user_register', {'account_type':'enterprise'}) }}" class="btn btn-xlarge btn-danger"><span class="hidden-tablet">Get </span>Enterprise</a>
+                    <a href="mailto:support@pipestack.com" class="btn btn-xlarge btn-danger"><span class="hidden-tablet">Get </span>Enterprise</a>
                 </div>
             </section>
         </div>
