updated links in welcome header

--- a/src/Cms/CoreBundle/Resources/views/Welcome/base.html.twig
+++ b/src/Cms/CoreBundle/Resources/views/Welcome/base.html.twig
@@ -12,8 +12,8 @@
 {% block welcomeHeader %}
     <div class="span pull-left">
         <a id="logo-name" href="{{ path('_welcome') }}">PipeStack</a>
-        <a href="mailto:support@pipestack.com" class="topnav-anchor" style="margin-left: 72px;">Contact</a>
-        <a href="http://blog.pipestack.com" class="topnav-anchor">Blog</a>
+        <a href="mailto:support@pipestack.com" class="topnav-anchor" style="margin-left: 72px;">Support</a>
+        <a href="http://demo.pipestack.com" class="topnav-anchor">Mobile Demo</a>
         <a href="{{ path('cms_core.developers') }}" class="topnav-anchor">Docs</a>
     </div>
     <div class="span pull-right">
